--- a/style.css
+++ b/style.css
@@ -109,4 +109,9 @@ body {
 .key-press {
   background: black;
   color: white;
+  transition: color 0.2s, background 0.2s;
+}
+
+.key-lock {
+  box-shadow: inset 0 0 0 1px green;
 }
