--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   height: 20vh;
   margin: 3px;
   white-space: nowrap;
+  resize: vertical;
 }
 
 .keyboard-text:focus {
@@ -36,7 +37,7 @@ body {
   border: 1px solid #00000012;
 }
 .key-square:before {
-  content: "";
+  content: '';
   display: block;
   flex-grow: 0;
   padding-top: 80%;
@@ -60,7 +61,7 @@ body {
 }
 
 .pict-container::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   bottom: 0;
